--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   </head>
   <body>
     <h1>Hello</h1>
-    <footer>Coded by Valerie Zapata</footer>
+    <footer>
+      Coded by <a href="https://github.com/vzapata18">Valerie Zapata</a> and is
+      hosted on
+      <a href="https://github.com/vzapata18/Final-weather-app">GitHub</a> and
+      website hosted on
+      <a href="https://lilbitweatherapp.netlify.app/">Netlify</a>
+    </footer>
   </body>
 </html>
