Added html to project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
     <title>Final Weather App</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city" required />
+        <input type="submit" value="search" />
+      </form>
+    </header>
+
+    <main>
+      <div>
+        <h1>Portland</h1>
+        <p>
+          Sunday 15:45, rain
+          <br />
+          Humidity 90%, Wind 8mph
+        </p>
+      </div>
+      <div>🌧️ 45°</div>
+    </main>
+
     <footer>
       Coded by <a href="https://github.com/vzapata18">Valerie Zapata</a> and is
       hosted on
