Styled main container and added font

--- a/index.html
+++ b/index.html
@@ -3,34 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Final Weather App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city" required />
-        <input type="submit" value="search" />
-      </form>
-    </header>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city" required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
 
-    <main>
-      <div>
-        <h1>Portland</h1>
-        <p>
-          Sunday 15:45, rain
-          <br />
-          Humidity 90%, Wind 8mph
-        </p>
-      </div>
-      <div>🌧️ 45°</div>
-    </main>
+      <main>
+        <div>
+          <h1>Portland</h1>
+          <p>
+            Sunday 15:45, rain
+            <br />
+            Humidity 90%, Wind 8mph
+          </p>
+        </div>
+        <div>🌧️ 45°</div>
+      </main>
 
-    <footer>
-      Coded by <a href="https://github.com/vzapata18">Valerie Zapata</a> and is
-      hosted on
-      <a href="https://github.com/vzapata18/Final-weather-app">GitHub</a> and
-      website hosted on
-      <a href="https://lilbitweatherapp.netlify.app/">Netlify</a>
-    </footer>
+      <footer>
+        Coded by <a href="https://github.com/vzapata18">Valerie Zapata</a> and
+        is hosted on
+        <a href="https://github.com/vzapata18/Final-weather-app">GitHub</a> and
+        website hosted on
+        <a href="https://lilbitweatherapp.netlify.app/">Netlify</a>
+      </footer>
+    </div>
   </body>
 </html>
