Added more basic CSS

--- a/index.html
+++ b/index.html
@@ -27,15 +27,22 @@
       </header>
 
       <main>
-        <div>
-          <h1>Portland</h1>
-          <p>
-            Sunday 15:45, rain
-            <br />
-            Humidity 90%, Wind 8mph
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Portland</h1>
+            <p class="weather-app-details">
+              Sunday 15:45, Rain
+              <br />
+              Humidity <strong>90%</strong>, Wind <strong>8mph</strong>
+            </p>
+          </div>
+
+          <div class="weather-app-temp-container">
+            <div class="temp-icon">🌧️</div>
+            <div class="temp">45°</div>
+            <div class="temp-unit">F</div>
+          </div>
         </div>
-        <div>🌧️ 45°</div>
       </main>
 
       <footer>
