added basic js search engine behavior

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city"
             required
             class="search-form-input"
+            id="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-button" />
         </form>
@@ -32,7 +33,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city">Portland</h1>
+            <h1 class="weather-app-city" id="city">Portland</h1>
             <p class="weather-app-details">
               Sunday 15:45, Rain
               <br />
@@ -56,5 +57,6 @@
         <a href="https://lilbitweatherapp.netlify.app/">Netlify</a>
       </footer>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
