search functionality using api

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city" id="city">Portland</h1>
+            <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
               Sunday 15:45, Rain
               <br />
@@ -41,8 +41,8 @@
 
           <div class="weather-app-temp-container">
             <div class="temp-icon">🌧️</div>
-            <div class="temp">45°</div>
-            <div class="temp-unit">F</div>
+            <div class="temp" id="current-temp"></div>
+            <div class="temp-unit">°F</div>
           </div>
         </div>
       </main>
