input more weather data

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
           <div>
             <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
-              Sunday 15:45, Rain
+              <span id="time"></span>,
+              <span id="description"></span>
               <br />
-              Humidity <strong>90%</strong>, Wind <strong>8mph</strong>
+              Humidity <strong id="humidity"></strong>, Wind
+              <strong id="wind-speed"></strong>
             </p>
           </div>
 
