added icon refresh from api

--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
           </div>
 
           <div class="weather-app-temp-container">
-            <div class="temp-icon">🌧️</div>
-            <div class="temp" id="current-temp"></div>
-            <div class="temp-unit">°F</div>
-          </div>
+            <div class="temp-icon" id="icon"></div>
+          <div class="temp" id="current-temp"></div>
+          <div class="temp-unit">°F</div>
         </div>
       </main>
 
